Fixed objective colours, fixed menu scrollbar

--- a/main.css
+++ b/main.css
@@ -8,7 +8,6 @@ body {
 }
 #menu, #objectives {
 	width: 255px;
-	height: 100%;
 	padding: 5px;
 }
 #objectives {
